@@ -160,6 +160,13 @@ void fo_expr::add_args(const std::vector<expr*>& args)
 }
 
 
+void fo_expr::remove_arg(csize i)
+{
+  theArgs.erase(theArgs.begin() + i);
+  compute_scripting_kind();
+}
+
+
 void fo_expr::compute_scripting_kind()
 {
   const function* func = get_func();
