@@ -24,6 +24,7 @@ Optimizations:
   * Use char* instead of zstring as the hashmap key in json objects
   * Removed document-order sorting after the index value probe functions.
   * Optimize positional predicates involving inequality (convert them to subsequence)
+  * Optimize positional predicate that is in CNF with other predicates.
 
 Bug Fixes/Other Changes:
   * Fixed bug #867227 (Improved error message for missing commas)
